--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,6 +3,8 @@
   width: 100%;
   height: 10vh;
   background-color: white;
+  position: relative;
+  z-index: 50;
 }
 
 /**** Navbar static ****/
